--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "lunar-typescript": "^1.6.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
