--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
+    "jotai": "^2.6.1",
     "lunar-typescript": "^1.6.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
