chore: add google analysis

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
