feat: allow input clear

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jotai": "^2.6.1",
     "lunar-typescript": "^1.7.0",
     "nanoid": "^5.0.4",
+    "rc-input": "^1.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
