--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-checker": "^0.6.2",
     "vite-plugin-pwa": "^0.17.4"
   }
 }
