feat: add i18next internationalization support
Add i18next, i18next-browser-languagedetector, and react-i18next packages for internationalization support. Update lunar-typescript to version 1.8.6. Update pnpm lockfile format to version 9.0.

--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
+    "i18next": "^25.5.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jotai": "^2.6.1",
-    "lunar-typescript": "^1.7.0",
+    "lunar-typescript": "^1.8.6",
     "nanoid": "^5.0.4",
     "rc-input": "^1.4.3",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.7.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
